# clickup_tracker

./: .gitignore  README.md  pyproject.toml
src/: client.py  headers.py  main.py  models.py  report.py  settings.py  utils.py
src/clickup/: __init__.py  client.py  report.py  utils.py
src/database/: __init__.py  session.py  user.py
src/routers/: reports.py  users.py
